updating mule to 3.5.0; fixed test

--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
 	<artifactId>template-sfdc2sfdc-user-broadcast</artifactId>
 	<packaging>mule</packaging>
 	<version>1.0.0</version>
-	<name>SFDC2SFDCUserBroadcast Mule Template Project</name>
+	<name>sfdc2sfdc-user-broadcast Mule Anypoint Template Project</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<mule.version>3.5.0-M4</mule.version>
+		<mule.version>3.5.0</mule.version>
 		<sfdc.version>5.4.3</sfdc.version>
 		<eclipsePluginVersion>2.8</eclipsePluginVersion>
 		<jdkName>JavaSE-1.6</jdkName>
@@ -471,11 +471,10 @@
 			<type>test-jar</type>
 		</dependency>
 		<dependency>
-			<groupId>org.mule.tests</groupId>
-			<artifactId>mule-tests-functional</artifactId>
-			<version>${mule.version}</version>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>2.9.1</version>
 			<scope>test</scope>
-			<type>test-jar</type>
 		</dependency>
 	</dependencies>
 
