Added http push messaging to the endpoint flow and unit tests

--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -5,6 +5,9 @@ page.size=
 poll.frequencyMillis=
 poll.startDelayMillis=
 
+#Trigger policy(push, poll)
+trigger.policy=
+
 # SalesForce Connector configuration for company A
 sfdc.a.username=
 sfdc.a.password=
