--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,2 +1,2 @@
-#Tue Mar 18 11:58:35 GMT-03:00 2014
-config.resources=businessLogic.xml,config.xml,endpoints.xml,errorHandling.xml
+#Mon Aug 18 13:20:23 CEST 2014
+config.resources=errorHandling.xml,endpoints.xml,config.xml,businessLogic.xml
