--- a/src/main/resources/mule.qa.properties
+++ b/src/main/resources/mule.qa.properties
@@ -1,9 +1,12 @@
-# Properties to be used on the QA environment
+# Properties to be used on the Development environment
 
 # Application Configuration
 page.size=
 poll.frequencyMillis=
 poll.startDelayMillis=
+
+#Trigger policy(push, poll)
+trigger.policy=
 
 # SalesForce Connector configuration for company A
 sfdc.a.username=
