Updated parent pom and dependencie, removed input definition in dw and fixed push notification tests

--- a/src/main/resources/mule.prod.properties
+++ b/src/main/resources/mule.prod.properties
@@ -1,9 +1,4 @@
-# Properties to be used on the Development environment
-
-# Application Configuration
-page.size=
-poll.frequencyMillis=
-poll.startDelayMillis=
+# Properties to be used on the production environment
 
 #Trigger policy(push, poll)
 trigger.policy=
