--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -1,3 +1,6 @@
 # Properties to be used across all the environments. They can be overwritten.
 http.port=
+page.size=
+poll.frequencyMillis=
+poll.startDelayMillis=
 watermark.default.expression=
