--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -1,9 +1,4 @@
-# Properties to be used on the Development environment
-
-# Application Configuration
-page.size=
-poll.frequencyMillis=
-poll.startDelayMillis=
+# Properties to be used on the development environment
 
 #Trigger policy(push, poll)
 trigger.policy=
