Fixed user template

--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -1,1 +1,11 @@
 # Properties to be used across all the environments. They can be overwritten.
+
+# Application configuration
+page.size=
+
+# Scheduler configuration
+scheduler.frequency=
+scheduler.startDelay=
+
+# Watermarking default last query timestamp e.g. 2017-12-13T03:00:59Z
+watermark.default.expression=
