--- a/src/main/resources/mule.qa.properties
+++ b/src/main/resources/mule.qa.properties
@@ -1,20 +1,11 @@
 # Properties to be used on the qa environment
 
-# Scheduler configuration
-scheduler.frequency=
-scheduler.startDelay=
-
-# Watermarking default last query timestamp e.g. 2017-12-13T03:00:59Z
-watermark.default.expression=
-
-# SalesForce Connector configuration for company A
+# SalesForce Connector configuration for instance A
 sfdc.a.username=
 sfdc.a.password=
 sfdc.a.securityToken=
-# Profile ID from SalesForce instance A(source)
-sfdc.a.profile.id=
 
-# SalesForce Connector configuration for company B
+# SalesForce Connector configuration for instance B
 sfdc.b.username=
 sfdc.b.password=
 sfdc.b.securityToken=
