--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -1,6 +1,6 @@
 # Properties to be used across all the environments. They can be overwritten.
 
-# Application configuration
+# Batch Aggregator configuration
 page.size=
 
 # Scheduler configuration
