--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <version>2.1.15</version>
     </parent>
     <artifactId>template-sfdc2sfdc-user-broadcast</artifactId>
-    <version>2.1.3</version>
+    <version>2.1.4-SNAPSHOT</version>
     <packaging>mule-application</packaging>
     <name>template-sfdc2sfdc-user-broadcast</name>
     <dependencies>
@@ -88,4 +88,4 @@
             </plugin>
         </plugins>
     </build>
-<scm><connection>scm:git:git@github.com:mulesoft/template-sfdc2sfdc-user-broadcast.git</connection><developerConnection>scm:git:git@github.com:mulesoft/template-sfdc2sfdc-user-broadcast.git</developerConnection><url>https://github.com/mulesoft/template-sfdc2sfdc-user-broadcast</url><tag>v2.1.3</tag></scm></project>
+<scm><connection>scm:git:git@github.com:mulesoft/template-sfdc2sfdc-user-broadcast.git</connection><developerConnection>scm:git:git@github.com:mulesoft/template-sfdc2sfdc-user-broadcast.git</developerConnection><url>https://github.com/mulesoft/template-sfdc2sfdc-user-broadcast</url><tag>HEAD</tag></scm></project>
